# chronos

./: .dockerignore  .gitignore  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile.in  INSTALL.md  LICENSE  README.md  ROADMAP.md  TROUBLESHOOT.md  chronos_benchmark_results.csv  docker-compose.cloud.yml  docker-compose.yml  install-user.sh  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docker.yml  pages.yml  publish-pypi.yml
apps/cli/: commands.cpp  commands.h  main.cpp
benchmarks/: CMakeLists.txt  benchmark_chronos.cpp  run_experiments.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: ALGORITHM.md  FAQ.md  USER_GUIDE.md  docker-usage.md
docs/html/: annotated.html  annotated_dup.js  chronos_8cpp.html  chronos_8cpp.js  chronos_8cpp__incl.dot  chronos_8h.html  chronos_8h.js  chronos_8h__dep__incl.dot  chronos_8h__incl.dot  chronos_8h_source.html  class_chronos_partitioner-members.html  class_chronos_partitioner.html  class_chronos_partitioner.js  class_chronos_partitioner__coll__graph.dot  class_chronos_partitioner_a099a7e3d6d83822a5b3b5e150046dd2b_icgraph.dot  class_chronos_partitioner_a0fa066b1bb2cdb2a5d81ef34e94f4e69_cgraph.dot  class_chronos_partitioner_a0fa066b1bb2cdb2a5d81ef34e94f4e69_icgraph.dot  class_chronos_partitioner_a30c4a803f4f0f136846f647c576f0e82_cgraph.dot  class_chronos_partitioner_a30c4a803f4f0f136846f647c576f0e82_icgraph.dot  class_chronos_partitioner_a370df1dc51313f72dbe8861560770483_cgraph.dot  class_chronos_partitioner_a370df1dc51313f72dbe8861560770483_icgraph.dot  class_chronos_partitioner_a4593685858c7b8e5b9dbf380bf7b9a49_cgraph.dot  class_chronos_partitioner_a4593685858c7b8e5b9dbf380bf7b9a49_icgraph.dot  class_chronos_partitioner_a4782e103ba929bcadcfc4a886d406c4f_icgraph.dot  class_chronos_partitioner_a491b4af33af0aaca0ff34768740f7861_icgraph.dot  class_chronos_partitioner_a4dd3908f3d7d41db19cfa813e54bd1b0_cgraph.dot  class_chronos_partitioner_a4dd3908f3d7d41db19cfa813e54bd1b0_icgraph.dot  class_chronos_partitioner_a52b78cf28c65eaf01659445e3ffa1c5b_icgraph.dot  class_chronos_partitioner_a604b4240e9295f4cb7b0e0e71864a59f_icgraph.dot  class_chronos_partitioner_a79dc766b98874a57229efd7238a8a447_cgraph.dot  class_chronos_partitioner_a79dc766b98874a57229efd7238a8a447_icgraph.dot  class_chronos_partitioner_a806f12634e6e2d74313fb30562b73465_cgraph.dot  class_chronos_partitioner_a91bf207af6287bb3da7d66e6f00d843b_cgraph.dot  class_chronos_partitioner_aa1c867189268a9fa72f475c39fb3fb50_icgraph.dot  class_chronos_partitioner_aa99f374f039590ca1c5f21855d5966b7_cgraph.dot  class_chronos_partitioner_aa99f374f039590ca1c5f21855d5966b7_icgraph.dot  class_chronos_partitioner_aa9f3297abc122236af9dd2f2365d8c81_icgraph.dot  class_chronos_partitioner_aaabaca50b47355ab9e2de312b03780aa_cgraph.dot  class_chronos_partitioner_aaabaca50b47355ab9e2de312b03780aa_icgraph.dot  class_chronos_partitioner_aaf157d6db8b0a38ac57c2361381d4e5d_icgraph.dot  (+34 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js
examples/: CMakeLists.txt  advanced_usage.cpp  simple_partition.cpp
include/: chronos.h  chronos_utils.h  gpu_partitioner.h
license_backup_20250914_193621/: CMakeCXXCompilerId.cpp.bak  advanced_usage.cpp.bak  benchmark_chronos.cpp.bak  chronos.h.bak  chronos_utils.cpp.bak  chronos_utils.h.bak  commands.cpp.bak  commands.h.bak  config_manager.cpp.bak  config_manager.h.bak  device_info.cpp.bak  device_info.h.bak  gpu_partition.cpp.bak  gpu_partition.h.bak  lock_file.cpp.bak  lock_file.h.bak  logger.h.bak  main.cpp.bak  opencl_include.h.bak  partitioner.cpp.bak  platform.h.bak  simple_partition.cpp.bak  test_config_manager.cpp.bak  test_device_info.cpp.bak  test_lock_file.cpp.bak  test_partitioner.cpp.bak  time_utils.cpp.bak  time_utils.h.bak  unix_platform.cpp.bak  unix_platform.h.bak  windows_platform.cpp.bak  windows_platform.h.bak
python/: README.md
python/tests/: test_chronos.py  test_integration.py  test_multiprocessing.py
scripts/: build_and_test.sh  build_release.sh  chronos-doctor.sh  clean.sh  deploy_cloud.sh  fix-python-bindings.sh  format.sh  install-quick.sh  install.sh  release.sh  run_benchmarks.sh  run_tests.sh  update_headers.py  verify_installation.sh
scripts/benchmarks/: run_benchmarks.sh
scripts/cloud/: sync_to_cloud.sh  teardown_cloud.sh
scripts/install/: install_deps.sh
scripts/utils/: monitor_gpu.sh
src/: chronos_utils.cpp  gpu_partitioner.cpp  gpu_session.cu  main.cpp  partitioner.cpp
src/backends/: mps_backend.cpp  opencl_backend.cpp  rocm_backend.cpp
src/config/: chronos.yaml  config_manager.cpp  config_manager.h
src/core/: device_info.cpp  device_info.h  gpu_partition.cpp  gpu_partition.h
src/logger/: logger.h
src/platform/: opencl_include.h  platform.h  unix_platform.cpp  unix_platform.h  windows_platform.cpp  windows_platform.h
src/utils/: lock_file.cpp  lock_file.h  time_utils.cpp  time_utils.h
tests/: CMakeLists.txt  test_config_manager.cpp  test_device_info.cpp  test_gpu_partitioner.cpp  test_lock_file.cpp  test_memory_enforcer.cpp  test_partitioner.cpp  test_user_permissions.cpp
